tests/suites/scctests/cc/error/0010-extraelif.c
/*
PATTERN:
0010-extraelif.c:11: error: #elif without #ifdef/ifndef
.
*/

#if 1

#else

#elif 0

#endif
